# majorprojectir

major_project_bot/: CMakeLists.txt  package.xml
major_project_bot/world/: b4_basement_layout.world
tour_guide/: CMakeLists.txt  package.xml
tour_guide/config/: amcl_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
tour_guide/launch/: tour_guide_demo.launch
tour_guide/maps/: basement_b4.pgm  basement_b4.yaml  basement_b4_2.pgm  basement_b4_2.yaml
tour_guide/scripts/: checkerboard_ir.py  goal_runner.py  help_watchdog.py
