<?xml version="1.0"?>
<package format="2">
  <name>tour_guide</name>
  <version>0.0.1</version>
  <description>
    TurtleBot tour guide project:
    follows a predetermined route on a static map and requests
    human assistance when blocked or when detecting a checkerboard
    at a door using the IR camera.
  </description>

  <maintainer email="maso0076@todo.todo">maso0076</maintainer>
  <license>BSD</license>

  <!-- Build system -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf2_ros</build_depend>

  <!-- Build export dependencies -->
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>sound_play</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>kobuki_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>

  <!-- Runtime dependencies -->
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sound_play</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>kobuki_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- Stack you integrate with at runtime -->
  <exec_depend>turtlebot_bringup</exec_depend>
  <exec_depend>turtlebot_navigation</exec_depend>
  <exec_depend>turtlebot_rviz_launchers</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>

  <export>
  </export>
</package>
